fix frontend: tasks not having a bit of distance from the sides on smaller devices

--- a/src/serve/styles/authed.tasks.css
+++ b/src/serve/styles/authed.tasks.css
@@ -1,5 +1,7 @@
 #tasks-wrapper {
   margin: auto;
+  margin-left: 5px;
+  margin-right: 5px;
   padding-left: 250px;
 }
 
